# silent-browser-use

./: .gitignore  LICENSE  NOTICE  README.md  README_zh.md  SKILL.md  pyproject.toml
examples/: bg3_nexus_scraper.py  login_once.py  quickstart.py
src/silent_browser_use/: __init__.py  chrome_profile.py  cli.py  helpers.py  login_flow.py
tests/: smoke_v01.py
